2009-07-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo in Automake variable name.
	* src/Makefile.am: Fix typo.

2009-07-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix URL field in pkg-config.
	* build-aux/pkg-config.pc.in,
	* configure.ac: Use configure defined url value in pkg-config file.

2009-07-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix missing library path in pkg-config libs.
	* configure.ac: Add missing flag.

2009-07-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove warnings.
	* src/kwsGraphicRoadmap.cpp: Initialize variables
	properly.

2009-07-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Kineo Makefile rules.
	* build-aux/kineo.mk: Define KPP_INSTALL_PREFIX when
	generating module's signature.
	* configure.ac: Define KINEO_PREFIX.
	* src/Makefile.am: Avoid overwriting CLEANFILES.

2009-07-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean package and generic library with automatic Corba server start.
	* .gitignore: Update ignore files list.
	* AUTHORS: New.
	* Makefile.am: Allos doc rule at root-level,
	use new pkg-config rules, add Libtool specific rules
	and search for macros in build-aux.
	* NEWS: New.
	* build-aux/bootstrap: Do not overwrite build-aux
	content.
	* build-aux/config.guess: New.
	* build-aux/config.sub: New.
	* build-aux/depcomp: New.
	* build-aux/doxygen.m4: New.
	* build-aux/init.mk: New.
	* build-aux/install-sh: New.
	* build-aux/kineo.mk: New.
	* build-aux/libtool.m4: New.
	* build-aux/ltmain.sh: New.
	* build-aux/ltoptions.m4: New.
	* build-aux/ltsugar.m4: New.
	* build-aux/ltversion.m4: New.
	* build-aux/lt~obsolete.m4: New.
	* build-aux/missing: New.
	* build-aux/move-if-change: New.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: New.
	* build-aux/warning.m4: New.
	* configure.ac: Clean and use new generic rules.
	* doc/Doxyfile.in: Rename from doc/package.dox.in.
	* doc/Makefile.am: Use new generic rules.
	* doc/footer.html,
	* doc/header.html: Make generic.