@@ -84,10 +84,10 @@ PKG_CHECK_MODULES(HPPCORE, hppcore_reqd)
 HPPCORE_DOCDIR=`$PKG_CONFIG hppCore --variable=docdir`
 AC_SUBST(HPPCORE_DOCDIR)
 
-define(hppcobaserver_reqd, [hppCorbaServer >= 1.8.3])
+define(hppcobaserver_reqd, [hpp-corbaserver]) dnl >= 1.8.3
 AC_SUBST(HPPCOBASERVER_REQD, "hppcobaserver_reqd")
 PKG_CHECK_MODULES(HPPCORBASERVER, hppcobaserver_reqd)
-HPPCORBASERVER_DOCDIR=`$PKG_CONFIG hppCorbaServer --variable=docdir`
+HPPCORBASERVER_DOCDIR=`$PKG_CONFIG hpp-corbaserver --variable=docdir`
 AC_SUBST(HPPCORBASERVER_DOCDIR)
 
 define(kwsplus_reqd, [kwsPlus >= 1.8])
