@@ -1,3 +1,10 @@
+2010-03-19  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Update to new hpp-corbaserver.
+	* configure.ac: Search for new package name.
+	* include/kppInterface/kppInterface.h,
+	* src/kppInterface.cpp: Update to new version.
+
 2009-07-09  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix typo in Automake variable name.
